--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,23 @@ h1, h3{
 img{
   width:150px;
   height:200px;
-
 }
+
+.grow { transition: all .2s ease-in-out; }
+.grow:hover { transform: scale(1.1); }
+
+button{
+  width:120px;
+  height:50px;
+  border:0;
+  border-radius: 1rem;
+  font-size:17px;
+  transition: all .2s ease-in-out;
+  cursor: pointer;
+  margin:10px;
+  font-family: 'Staatliches', cursive;
+}
+
 
 
 
