--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,33 @@
   background-image: linear-gradient(to bottom right,#4A235A,#154360);
   padding-bottom:200px;
 }
+
+.shine {
+	background: #222 -webkit-gradient(linear, left top, right top, from(#222), to(#222), color-stop(0.5, #fff)) 0 0 no-repeat;
+	-webkit-background-size: 150px;
+	color: rgba(255, 255, 255, 0.3);
+	-webkit-background-clip: text;
+	-webkit-animation-name: shine;
+	-webkit-animation-duration: 5s;
+	-webkit-animation-iteration-count: infinite;
+  text-shadow: 0 0px 0px rgba(255, 255, 255, 0.5);
+  
+  
+}
+@-webkit-keyframes shine {
+	0%, 10% {
+		background-position: -1000px;
+	}
+	20% {
+		background-position: top left;
+	}
+	90% {
+		background-position: top right;
+	}
+	100% {
+		background-position: 1000px;
+	}
+}
 h1{
   font-family: 'Staatliches', cursive;
   font-size:45px;
@@ -18,7 +45,12 @@ h3{
   font-size:24px;
   letter-spacing: 1.3px; 
 }
-
+hr{
+  margin-top:20px;
+  opacity: 0.35;
+  margin-right:200px;
+  margin-left:200px;
+}
 .row{
   padding-top:50px;
   padding-bottom:50px;
@@ -47,33 +79,14 @@ button{
   font-family: 'Staatliches', cursive;
 }
 
-.shine {
-	background: #222 -webkit-gradient(linear, left top, right top, from(#222), to(#222), color-stop(0.5, #fff)) 0 0 no-repeat;
-	-webkit-background-size: 150px;
-	color: rgba(255, 255, 255, 0.3);
-	-webkit-background-clip: text;
-	-webkit-animation-name: shine;
-	-webkit-animation-duration: 5s;
-	-webkit-animation-iteration-count: infinite;
-  text-shadow: 0 0px 0px rgba(255, 255, 255, 0.5);
-  
+.climate-section{
+  margin: 15px 170px 0px 170px;
+  background-color:#c3c1c9;
+  color:black;
   
 }
-
-
-@-webkit-keyframes shine {
-	0%, 10% {
-		background-position: -1000px;
-	}
-	20% {
-		background-position: top left;
-	}
-	90% {
-		background-position: top right;
-	}
-	100% {
-		background-position: 1000px;
-	}
+.section{
+border:1px solid black;
 }
 
 
