--- a/src/App.css
+++ b/src/App.css
@@ -59,9 +59,15 @@ hr{
   
 }
 img{
+  
+  width:100%;
+  height:auto;
+}
+
+.column{
+  
   width:170px;
   height:240px;
-  
 }
 
 .grow { transition: all .2s ease-in-out; }
