--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,6 @@ img{
 }
 
 .column{
-  
   width:170px;
   height:240px;
 }
@@ -86,13 +85,22 @@ button{
 }
 
 .climate-section{
-  margin: 15px 170px 0px 170px;
+  align-content: center;
+  max-width: 800px;
   background-color:#c3c1c9;
   color:black;
+  display:flex;
+  margin:auto;
+  box-shadow: 5px 10px 18px grey;
+  
+  
   
 }
 .section{
 border:1px solid black;
+padding:20px;
+
+
 }
 
 
