--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,13 @@
 .App {
   text-align: center;
   font-family: 'Montserrat', sans-serif;
-  color:pink;
+  color:violet;
+  border:3px solid green;
   background-image: linear-gradient(to bottom right,#4A235A,#154360);
-  padding-bottom:200px;
+  
 }
 
-.shine {
+ .shine {
 	background: #222 -webkit-gradient(linear, left top, right top, from(#222), to(#222), color-stop(0.5, #fff)) 0 0 no-repeat;
 	-webkit-background-size: 150px;
 	color: rgba(255, 255, 255, 0.3);
@@ -51,7 +52,7 @@ hr{
   margin-right:200px;
   margin-left:200px;
 }
-.row{
+.row-img{
   padding-top:50px;
   padding-bottom:50px;
   display:flex;
@@ -59,30 +60,29 @@ hr{
   
 }
 img{
-  
   width:100%;
   height:auto;
 }
 
+.column-img{
+  width:200px;
+  height:345px;
+}
+.row{
+  padding-top:30px;
+  padding-bottom:30px;
+  display:flex;
+  justify-content: center;
+}
 .column{
-  width:170px;
-  height:240px;
+ border:3px solid green;
+ margin:0 15px 0 15px;
 }
 
 .grow { transition: all .2s ease-in-out; }
 .grow:hover { transform: scale(1.1); }
 
-button{
-  width:120px;
-  height:50px;
-  border:0;
-  border-radius: 1rem;
-  font-size:17px;
-  transition: all .2s ease-in-out;
-  cursor: pointer;
-  margin:10px;
-  font-family: 'Staatliches', cursive;
-}
+
 
 .climate-section{
   align-content: center;
@@ -95,30 +95,30 @@ button{
   
   
   
-}
-.section{
+} 
+/* .section{
 border:1px solid black;
 padding:20px;
 }
 .pop-section{
   margin:auto;
   display:inline-block;
-}
-.card{
+} */
+/* .card{
   box-shadow: 0 4px 8px 0 rgb(0,0,0,0.2);
   transition: 0.3s;
   max-width:400px;
   margin:4px;
  
-}
-.card:hover{
+} */
+/* .card:hover{
   box-shadow: 0 8px 16px rgba(0,0,0,0.2);
   cursor: pointer;
 }
 .container{
   padding: 2px 16px;
 
-}
+}  */
 
 
 
