--- a/src/App.css
+++ b/src/App.css
@@ -1,126 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
-
-.App {
-  text-align: center;
-  font-family: 'Montserrat', sans-serif;
-  color:violet;
-  border:3px solid green;
-  background-image: linear-gradient(to bottom right,#4A235A,#154360);
-  
-}
-
- .shine {
-	background: #222 -webkit-gradient(linear, left top, right top, from(#222), to(#222), color-stop(0.5, #fff)) 0 0 no-repeat;
-	-webkit-background-size: 150px;
-	color: rgba(255, 255, 255, 0.3);
-	-webkit-background-clip: text;
-	-webkit-animation-name: shine;
-	-webkit-animation-duration: 5s;
-	-webkit-animation-iteration-count: infinite;
-  text-shadow: 0 0px 0px rgba(255, 255, 255, 0.5);
-  
-  
-}
-@-webkit-keyframes shine {
-	0%, 10% {
-		background-position: -1000px;
-	}
-	20% {
-		background-position: top left;
-	}
-	90% {
-		background-position: top right;
-	}
-	100% {
-		background-position: 1000px;
-	}
-}
-h1{
-  font-family: 'Staatliches', cursive;
-  font-size:45px;
-  letter-spacing:1px;
-}
-h3{
-  font-family: 'Staatliches', cursive;
-  font-size:24px;
-  letter-spacing: 1.3px; 
-}
-hr{
-  margin-top:20px;
-  opacity: 0.35;
-  margin-right:200px;
-  margin-left:200px;
-}
-.row-img{
-  padding-top:50px;
-  padding-bottom:50px;
-  display:flex;
-  justify-content: space-around;
-  
-}
-img{
-  width:100%;
-  height:auto;
-}
-
-.column-img{
-  width:200px;
-  height:345px;
-}
-.row{
-  padding-top:30px;
-  padding-bottom:30px;
-  display:flex;
-  justify-content: center;
+body{
+	font-family: Arial, Helvetica, sans-serif;
 }
 .column{
- border:3px solid green;
- margin:0 15px 0 15px;
+	padding-left:40px;
 }
 
-.grow { transition: all .2s ease-in-out; }
-.grow:hover { transform: scale(1.1); }
-
-
-
-.climate-section{
-  align-content: center;
-  max-width: 800px;
-  background-color:#c3c1c9;
-  color:black;
-  display:flex;
-  margin:auto;
-  box-shadow: 5px 10px 18px grey;
-  
-  
-  
-} 
-/* .section{
-border:1px solid black;
-padding:20px;
+.cat{
+	width: 80%;
+    margin: 8px;
+    border: 1px solid #eee;
+    box-shadow: 0 2px 3px #ccc;
+    padding: 16px;
+    text-align: center;
+    background-color: blue;
+    color: white;
 }
-.pop-section{
-  margin:auto;
-  display:inline-block;
-} */
-/* .card{
-  box-shadow: 0 4px 8px 0 rgb(0,0,0,0.2);
-  transition: 0.3s;
-  max-width:400px;
-  margin:4px;
- 
-} */
-/* .card:hover{
-  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-  cursor: pointer;
+
+.card{
+	margin:20px;
+	max-width:350px;
+	min-height:400px;
+
 }
-.container{
-  padding: 2px 16px;
 
-}  */
-
-
-
-
-
+.cardActionArea{
+	display:flex !important;
+}
+.cardMedia{
+	max-width:140px;
+}
+.containerGrid{
+	flex-grow:1
+}
